mdapi/Custom/objects/Service_Item__c.object
<CustomObject>
    <description>Resident Services Project:  This object captures work orders and is used to integrate with TOA</description>
    <fields>
        <fullName>After_Hours_Service_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After-Hours Service Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Bucket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCA_Notes__c</fullName>
        <inlineHelpText>This field describes the work to be done</inlineHelpText>
        <label>Work Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Date_Time__c</fullName>
        <inlineHelpText>This is the Date &amp; Time the caller called in on this item</inlineHelpText>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Order_Date__c</fullName>
        <formula>DATEVALUE( Call_Date_Time__c )</formula>
        <label>Call Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Notes__c</fullName>
        <label>Cancel Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Non Issue</fullName>
                </value>
                <value>
                    <fullName>Resident Non Responsive</fullName>
                </value>
                <value>
                    <fullName>Resident Repaired</fullName>
                </value>
                <value>
                    <fullName>Resident Request</fullName>
                </value>
                <value>
                    <fullName>Resident Responsibility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Formula__c</fullName>
        <formula>TEXT(Category__c)</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Cabinets</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Clog</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Fence</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
                <value>
                    <fullName>Pest</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Water Heater</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_On_Formula__c</fullName>
        <formula>IF( Yardi_Closed_on__c == null || ISBLANK(Yardi_Closed_on__c), DATEVALUE( SItem_Actual_Closed_Date_Time__c ), Yardi_Closed_on__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_On_Formula__c</fullName>
        <formula>IF(Yardi_Created_on__c == null || ISBLANK(Yardi_Created_on__c), DATEVALUE(CreatedDate), Yardi_Created_on__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_by__c</fullName>
        <label>Created by:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatcher_Notes__c</fullName>
        <label>Dispatcher Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <formula>IF(
 	(
 		ISPICKVAL( Service_Item_Status__c , &quot;Closed - Canceled&quot;) ||
 		ISPICKVAL( Service_Item_Status__c , &quot;Closed - Not Completed&quot;) ||
 		ISPICKVAL( Service_Item_Status__c , &quot;Closed - Completed&quot;)
 	),
 	1,
 	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_High__c</fullName>
        <formula>IF(
 	ISPICKVAL(Priority__c, &quot;High&quot;),
 	1,
 	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Low__c</fullName>
        <formula>IF(
 	ISPICKVAL(Priority__c, &quot;Low&quot;),
 	1,
 	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Medium__c</fullName>
        <formula>IF(
 	ISPICKVAL(Priority__c, &quot;Medium&quot;),
 	1,
 	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Medium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Open__c</fullName>
        <formula>IF(
 	(
 		ISPICKVAL( Service_Item_Status__c , &quot;New&quot;) ||
                ISPICKVAL( Service_Item_Status__c , &quot;Sent to Dispatch&quot;) ||
                ISPICKVAL( Service_Item_Status__c , &quot;Waiting Vendor Assignment&quot;) || 
 		ISPICKVAL( Service_Item_Status__c , &quot;In Progress - Technician&quot;) ||
 		ISPICKVAL( Service_Item_Status__c , &quot;In Progress - Vendor Mgmt&quot;)
 	),
 	1,
 	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Urgent__c</fullName>
        <formula>IF(
 	ISPICKVAL(Priority__c, &quot;Urgent&quot;),
 	1,
 	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Urgent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Updated_by__c</fullName>
        <label>Last Updated by:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_on__c</fullName>
        <label>Last Updated on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT ( PortfolioProperty__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Cost__c</fullName>
        <inlineHelpText>purchased materials for this Service Item</inlineHelpText>
        <label>Material Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Materials_Receipt_s_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Materials Receipt(s) Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Region__c</fullName>
        <formula>IF( $User.Formula_Region__c = Region__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Service_Items__c</fullName>
        <formula>IF ($User.Full_Name__c =  Technician__r.Name , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Service Items (Technician)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Completed_Notes__c</fullName>
        <label>Not Completed Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_Completed_Reason_Formula__c</fullName>
        <formula>TEXT( Not_Completed_Reason__c)</formula>
        <label>Not Completed Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Completed_Reason__c</fullName>
        <label>Not Completed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technician_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Escalate to Vendor - Scope</fullName>
                </value>
                <value>
                    <fullName>Escalate to Vendor - Skill</fullName>
                </value>
                <value>
                    <fullName>No Adult Present</fullName>
                </value>
                <value>
                    <fullName>Resident Emergency</fullName>
                </value>
                <value>
                    <fullName>Resident Not Home</fullName>
                </value>
                <value>
                    <fullName>Resident Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor</fullName>
                    <default>true</default>
                    <label>Vendor</label>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PortfolioProperty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio/Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>Service_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_Formula__c</fullName>
        <formula>TEXT( Priority__c)</formula>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>PortfolioProperty__r.Property_City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>PortfolioProperty__r.Property_State__c</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>PortfolioProperty__r.Property_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <formula>PortfolioProperty__r.Property_Zip_Code__c</formula>
        <label>Property Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Text__c</fullName>
        <label>Region (Text)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT ( PortfolioProperty__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Service_Item_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related Service Item Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Service_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service Item</label>
        <referenceTo>Service_Item__c</referenceTo>
        <relationshipLabel>Related Service Items</relationshipLabel>
        <relationshipName>Service_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resident_Caused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resident Caused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resident_Email__c</fullName>
        <formula>Service_Request__r.Resident_Email__c</formula>
        <label>Resident Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_First_Name__c</fullName>
        <formula>Service_Request__r.Resident_First_Name__c</formula>
        <label>Resident First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Home_Phone__c</fullName>
        <formula>Service_Request__r.Resident_Home_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Last_Name__c</fullName>
        <formula>Service_Request__r.Resident_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Mobile_Phone__c</fullName>
        <formula>Service_Request__r.Resident_Mobile_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SItem_Actual_Closed_Date_Time__c</fullName>
        <label>SItem Actual Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SItem_Actual_Open_Duration__c</fullName>
        <formula>IF(
	OR(
		NOT(ISNULL( SItem_Actual_Closed_Date_Time__c )),
		NOT(ISBLANK( SItem_Actual_Closed_Date_Time__c ))
	)
	,
	(SItem_Actual_Closed_Date_Time__c - CreatedDate)*24,
	(Now() - CreatedDate)*24
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SItem Actual Open Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SItem_Closed_Date_Time__c</fullName>
        <label>SItem Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SItem_Count__c</fullName>
        <description>The Power of 1 for counting on Reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SItem Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SItem_Open_Duration__c</fullName>
        <formula>IF(
	OR(
		NOT(ISNULL( SItem_Closed_Date_Time__c )),
		NOT(ISBLANK( SItem_Closed_Date_Time__c ))
	)
	,
	(SItem_Closed_Date_Time__c - CreatedDate)*24,
	(Now() - CreatedDate)*24
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Number of Days the Item was open</inlineHelpText>
        <label>SItem Open Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SItem_Scheduled_Duration__c</fullName>
        <formula>IF(
	OR(
		NOT(ISNULL( Scheduled_Date_Time__c )),
		NOT(ISBLANK( Scheduled_Date_Time__c ))
	)
	,
	(Scheduled_Date_Time__c- CreatedDate)*24,
	(Now() - CreatedDate)*24
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SItem Scheduled Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <inlineHelpText>This is the day the technician is scheduled to arrive.  This will be copied from the Outlook Schedule Phase 1.</inlineHelpText>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Item_Category__c</fullName>
        <label>Service Item Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technician Service Item</fullName>
                </value>
                <value>
                    <fullName>Vendor Service Item</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Technician Service Item</fullName>
                </value>
                <value>
                    <fullName>Vendor Service Item via Technician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Item_Status__c</fullName>
        <label>Service Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent to Dispatch</fullName>
                </value>
                <value>
                    <fullName>Waiting Vendor Assignment</fullName>
                </value>
                <value>
                    <fullName>In Progress - Technician</fullName>
                </value>
                <value>
                    <fullName>In Progress - Vendor Mgmt</fullName>
                </value>
                <value>
                    <fullName>Closed - Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request_Last_Activity__c</fullName>
        <formula>Service_Request__r.LastActivityDate</formula>
        <label>Service Request Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Request_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request Survey</label>
        <referenceTo>Service_Request_Survey__c</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>Service_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>Service_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Source2__c</fullName>
        <formula>TEXT(Service_Request__r.Service_Source__c)</formula>
        <label>Service Source2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source__c</fullName>
        <label>Service Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resident Call In</fullName>
                </value>
                <value>
                    <fullName>Yardi Email Services</fullName>
                </value>
                <value>
                    <fullName>Dispatcher</fullName>
                </value>
                <value>
                    <fullName>Vendor Supervisor</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Technician Supervisor</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_Formula_del__c</fullName>
        <formula>TEXT(Sub_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dishwasher</fullName>
                </value>
                <value>
                    <fullName>Dryer</fullName>
                </value>
                <value>
                    <fullName>Electric Stove</fullName>
                </value>
                <value>
                    <fullName>Refrigerator</fullName>
                </value>
                <value>
                    <fullName>Gas Stove</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Vent Hood</fullName>
                </value>
                <value>
                    <fullName>Washer</fullName>
                </value>
                <value>
                    <fullName>Electric Oven</fullName>
                </value>
                <value>
                    <fullName>Gas Oven</fullName>
                </value>
                <value>
                    <fullName>Cabinets Repair</fullName>
                </value>
                <value>
                    <fullName>Microbial Growth - Cabinets</fullName>
                </value>
                <value>
                    <fullName>Shelves</fullName>
                </value>
                <value>
                    <fullName>Vanity</fullName>
                </value>
                <value>
                    <fullName>Cabinet Doors</fullName>
                </value>
                <value>
                    <fullName>Cabinet Drawers</fullName>
                </value>
                <value>
                    <fullName>Hinges</fullName>
                </value>
                <value>
                    <fullName>Cleanouts</fullName>
                </value>
                <value>
                    <fullName>Laundry</fullName>
                </value>
                <value>
                    <fullName>Main Line</fullName>
                </value>
                <value>
                    <fullName>Multiple Tub/shower</fullName>
                </value>
                <value>
                    <fullName>Multiple sinks</fullName>
                </value>
                <value>
                    <fullName>Sink</fullName>
                </value>
                <value>
                    <fullName>Toilet &amp; Tub</fullName>
                </value>
                <value>
                    <fullName>Toilet Only</fullName>
                </value>
                <value>
                    <fullName>Tub/Shower</fullName>
                </value>
                <value>
                    <fullName>Sink Clogged by Garbage Disposal</fullName>
                </value>
                <value>
                    <fullName>Water Heater</fullName>
                </value>
                <value>
                    <fullName>Inadequate Venting</fullName>
                </value>
                <value>
                    <fullName>Leaking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Repairment_Satisfaction_Level__c</fullName>
        <label>Survey - Repairment Satisfaction Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repaired to your satisfaction</fullName>
                </value>
                <value>
                    <fullName>Repaired</fullName>
                </value>
                <value>
                    <fullName>Not repaired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspend_Notes__c</fullName>
        <label>Suspend Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suspend_Reason__c</fullName>
        <label>Suspend Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Multiple Service Items</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOA_Activity_ID__c</fullName>
        <label>TOA Activity No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Status__c</fullName>
        <label>Technician Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technician_Vendor_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technician Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technician_Vendor_Notes__c</fullName>
        <label>Technician Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>Service_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Slot__c</fullName>
        <inlineHelpText>Time Slot is the block of time the Technician is scheduled and is communicated to the Resident.</inlineHelpText>
        <label>Time Slot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6-8</fullName>
                </value>
                <value>
                    <fullName>8-10</fullName>
                </value>
                <value>
                    <fullName>10-12</fullName>
                </value>
                <value>
                    <fullName>12-14</fullName>
                </value>
                <value>
                    <fullName>14-16</fullName>
                </value>
                <value>
                    <fullName>16-18</fullName>
                </value>
                <value>
                    <fullName>18-20</fullName>
                </value>
                <value>
                    <fullName>8-11</fullName>
                </value>
                <value>
                    <fullName>11-14</fullName>
                </value>
                <value>
                    <fullName>14-17</fullName>
                </value>
                <value>
                    <fullName>8-12</fullName>
                </value>
                <value>
                    <fullName>13-17</fullName>
                </value>
                <value>
                    <fullName>8-14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent_on_Service_Item__c</fullName>
        <inlineHelpText>Maximum is 9.75 hours on a job.
.25 = 15 minutes
.50 = 30 minutes
.75 = 45 minutes
1    = 1 hour
1.25 = 1 hour 15 minutes
etc.</inlineHelpText>
        <label>Technician Time Spent (hours)</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>IF( Vendor_Invoice_Amount__c == null || Vendor_Invoice_Amount__c == 0, (Time_Spent_on_Service_Item__c * 25) +  Material_Cost__c, Vendor_Invoice_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>Service_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Amount__c</fullName>
        <label>Vendor Invoice Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Invoice Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Date__c</fullName>
        <label>Vendor Invoice Date</label>
        <type>Date</type>
    </fields>
</CustomObject>